--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         background: #eee;
       }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw"></script>
     <script>
       function initialize() {
         var mapOptions = {
