--- a/index.html
+++ b/index.html
@@ -435,19 +435,19 @@
             <td id="iw-url"></td>
           </tr>
           <tr id="iw-address-row" class="iw_table_row">
-            <td class="iw_attribute_name">Address:</td>
+            <td class="iw_attribute_name">Direccion:</td>
             <td id="iw-address"></td>
           </tr>
           <tr id="iw-phone-row" class="iw_table_row">
-            <td class="iw_attribute_name">Telephone:</td>
+            <td class="iw_attribute_name">Telefono:</td>
             <td id="iw-phone"></td>
           </tr>
           <tr id="iw-rating-row" class="iw_table_row">
-            <td class="iw_attribute_name">Rating:</td>
+            <td class="iw_attribute_name">Categoria:</td>
             <td id="iw-rating"></td>
           </tr>
           <tr id="iw-website-row" class="iw_table_row">
-            <td class="iw_attribute_name">Website:</td>
+            <td class="iw_attribute_name">pagina web:</td>
             <td id="iw-website"></td>
           </tr>
         </table>
