--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
       var map, places, infoWindow;
       var markers = [];
       var autocomplete;
-      var countryRestrict = {'country': 'us'};
+      var countryRestrict = {'country': 'mx'};
       var MARKER_PATH = 'https://maps.gstatic.com/intl/en_us/mapfiles/marker_green';
       var hostnameRegexp = new RegExp('^https?://.+?/');
 
@@ -528,8 +528,8 @@
 
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-          zoom: countries['us'].zoom,
-          center: countries['us'].center,
+          zoom: countries['mx'].zoom,
+          center: countries['mx'].center,
           mapTypeControl: false,
           panControl: false,
           zoomControl: false,
@@ -731,7 +731,7 @@
         }
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&libraries=places&callback=initMap"
+    <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/search?q=Hoteles%20de%20oaxaca&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
         async defer></script>
     
     
