--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </HEAD> 
 <BODY> 
 
+<div>
+      <input id="autocomplete" placeholder="Lugar a buscar..." type="text" />
+      <button type="button" onclick="busqueda()">Buscar</button>
+</div>
+
 
 <script>
  function busqueda() {
