--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
 <head>
 <title>Prueba</title>
-<script type="text/javascript" src="archivo.js"></script>
+
 </head>
 <body>
 <h1><strong>Formulario ejemplo !!!</strong></h1>
-	<div id="iframe1"></div> 
+	
+	<iframe width="600" height="450" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/search?q=Bares+en+Oaxaca,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
  
 </body>
 </html>
