--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
-<html>
-<head>
-<title>Prueba</title>
+<!DOCTYPE html>
+<HTML> 
+<HEAD> 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <TITLE>Ejemplo 2</TITLE> 
+</HEAD> 
+<BODY> 
 
-</head>
-<body>
-<h1><strong>Formulario ejemplo !!!</strong></h1>
-	
-	<iframe width="600" height="450" frameborder="0" style="border:0"
+<div>
+      <input id="autocomplete" placeholder="Lugar a buscar..." type="text" />
+      <button type="button" onclick="busqueda()">Buscar</button>
+</div>
+
+
+<script>
+ function busqueda() {
+            var l=document.getElementById('lugar').value;   
+        }
+</script>    
+    <iframe width="600" height="450" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/search?q=Bares+en+Oaxaca,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
- 
-</body>
-</html>
+
+
+</BODY> 
+</HTML> 
+
+		
