--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
  <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <script type="text/javascript" src="/yigo2227.github.io/archivo.js"></script>
+ 
 <title>Prueba</title>
 </head>
 <body>
