--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta charset="utf-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <script type="text/javascript" src="/yigo2227.github.io/archivo.js"></script>
+ <script type="text/javascript" src="archivo.js"></script>
  
 <title>Prueba</title>
 </head>
