--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 <h1><strong>Formulario ejemplo !!!</strong></h1>
+
+<input type="button" value="Buscar" onClick="buscarSitio()" />
+
 	<div id="ifame1"></div>
 	
  
