--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
 </head>
 <body>
 <h1><strong>Formulario ejemplo !!!</strong></h1>
-<iframe width="600" height="450" frameborder="0" style="border:0"
+<iframe id="myIframe" width="600" height="450" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/search?q=Bares+en+Oaxaca,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
 <input type="button" value="Buscar" onClick="buscarSitio()" />
-
-
-	
- 
 </body>
 </html>
