--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <script type="text/javascript">
     
     function buscarSitio() {
-    var lugar = 'Hoteles'; 
+    var lugar = document.getElementById("lugar"); 
     
     document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+'+en+Oaxaca,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
 }
@@ -19,6 +19,10 @@
 <h1><strong>Formulario ejemplo !!!</strong></h1>
 <iframe id="myIframe" width="600" height="450" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/search?q=Bares+en+Oaxaca,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
+
+<div>"
+<input id="lugar" placeholder="Lugar a buscar..." type="text" />
 <input type="button" value="Buscar" onClick="buscarSitio()" />
+</div>
 </body>
 </html>
