--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <iframe id="myIframe" width="600" height="450" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/search?q=Bares+en+Oaxaca,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
 
-<div>"
+<div>
 <input id="lugar" placeholder="Lugar a buscar..." type="text" />
 <input type="button" value="Buscar" onClick="buscarSitio()" />
 </div>
