--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <script type="text/javascript">
     
     function buscarSitio() {
-    var lugar = document.getElementById("lugar"); 
+    var lugar = document.getElementById("lugar").value; 
     
     document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+'+en+Oaxaca,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
 }
@@ -21,8 +21,9 @@
 src="https://www.google.com/maps/embed/v1/search?q=Bares+en+Oaxaca,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
 
 <div>
-<input id="lugar" placeholder="Lugar a buscar..." type="text" />
-<input type="button" value="Buscar" onClick="buscarSitio()" />
+    <input id="lugar" placeholder="Lugar a buscar..." type="text" />
+    <input type="button" value="Buscar" onClick="buscarSitio()" />
 </div>
+
 </body>
 </html>
