--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     function buscarSitio() {
     var lugar = document.getElementById("lugar").value; 
     
-    document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+'+en+Oaxaca,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
+    document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+'+de+Oaxaca+de+Juárez,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
 }
 </script>
  
@@ -18,7 +18,7 @@
 <body>
 <h1><strong>Formulario ejemplo !!!</strong></h1>
 <iframe id="myIframe" width="600" height="450" frameborder="0" style="border:0"
-src="https://www.google.com/maps/embed/v1/search?q=Bares+en+Oaxaca,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
+src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
 
 <div>
     <input id="lugar" placeholder="Lugar a buscar..." type="text" />
@@ -27,3 +27,6 @@ src="https://www.google.com/maps/embed/v1/search?q=Bares+en+Oaxaca,+México&key=
 
 </body>
 </html>
+
+
+<!-- +de+Oaxaca+de+Juárez,+México -- +en+Oaxaca,+México-->
