--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     function buscarSitio() {
     var lugar = document.getElementById("lugar").value; 
     
-    document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+'+de+Oaxaca+de+Juárez,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
+    document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+',+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
 }
 </script>
  
-<title>Prueba</title>
+
 </head>
 <body>
 <h1><strong>Formulario ejemplo !!!</strong></h1>
@@ -22,8 +22,44 @@ src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+M
 
 <div>
     <input id="lugar" placeholder="Lugar a buscar..." type="text" />
-    <input type="button" value="Buscar" onClick="buscarSitio()" />
+    <input type="button" value="Geocoder" onClick="buscarSitio()" />
 </div>
+
+
+
+
+
+
+
+
+
+
+   <!-- <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&callback=initMap">
+    </script>
+-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
