--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
  <script type="text/javascript">
     
     function buscarSitio() {
-    var lugar = document.getElementById("lugar").value; 
+    var lugar = document.getElementById("lugar").value;
+    var estado = document.getElementById("estado").value; 
     
-    document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+',+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
+    document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+estado+',+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
 }
 </script>
  
@@ -22,6 +23,7 @@ src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+M
 
 <div>
     <input id="lugar" placeholder="Lugar a buscar..." type="text" />
+     <input id="estado" placeholder="Estado a buscar..." type="text" />
     <input type="button" value="Geocoder" onClick="buscarSitio()" />
 </div>
 
