--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     var lugar = document.getElementById("lugar").value;
     var estado = document.getElementById("estado").value; 
     
-    document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+estado+',+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
+    document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+'de'+estado+',+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
 }
 </script>
  
