--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&signed_in=true&libraries=places&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&signed_in=true&libraries=places&callback=initMap"
         async defer></script>
 
 </head>
