--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ var infowindow = new google.maps.InfoWindow();
 
 </head>
 
-<body>
+<body onload="initMap()">
 <h1><strong>Formulario ejemplo !!!</strong></h1>
 <iframe id="myIframe" width="600" height="450" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
