--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@ var infowindow = new google.maps.InfoWindow();
 </script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&signed_in=true&libraries=places&callback=initMap"
-        async defer></script>
+        async defer>
+    </script>
 
 </head>
 
@@ -165,7 +166,7 @@ src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+M
 
 <div>
     <input id="lugar" placeholder="Lugar a buscar..." type="text" />
-     <input id="pac-input" placeholder="Estado a buscar..." type="text" />
+     <input id="estado" placeholder="Estado a buscar..." type="text" />
     <input type="button" value="Geocoder" onClick="initMap()" />
 </div>
 
