--- a/index.html
+++ b/index.html
@@ -57,7 +57,65 @@
 
     </style>
 
- <script type="text/javascript">
+ 
+
+</head>
+
+<body>
+<h1><strong>Formulario ejemplo !!!</strong></h1>
+<iframe id="myIframe" width="600" height="450" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
+
+<div>
+    <input id="lugar" placeholder="Lugar a buscar..." type="text" />
+     <input id="estado" placeholder="Estado a buscar..." type="text" />
+    <input type="button" value="Geocoder" onClick="initMap()" />
+</div>
+
+       <input id="pac-input" class="controls" type="text"
+        placeholder="Enter a location">
+    <div id="type-selector" class="controls">
+      <input type="radio" name="type" id="changetype-all" checked="checked">
+      <label for="changetype-all">All</label>
+
+      <input type="radio" name="type" id="changetype-establishment">
+      <label for="changetype-establishment">Establishments</label>
+
+      <input type="radio" name="type" id="changetype-address">
+      <label for="changetype-address">Addresses</label>
+
+      <input type="radio" name="type" id="changetype-geocode">
+      <label for="changetype-geocode">Geocodes</label>
+    </div>
+    <div id="map"></div>
+
+   <!-- <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&callback=initMap">
+    </script>
+-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
+<script type="text/javascript">
     
     function initMap() {
     
@@ -156,63 +214,6 @@ var infowindow = new google.maps.InfoWindow();
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&signed_in=true&libraries=places&callback=initMap"
         async defer>
     </script>
-
-</head>
-
-<body onload="initMap()">
-<h1><strong>Formulario ejemplo !!!</strong></h1>
-<iframe id="myIframe" width="600" height="450" frameborder="0" style="border:0"
-src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
-
-<div>
-    <input id="lugar" placeholder="Lugar a buscar..." type="text" />
-     <input id="estado" placeholder="Estado a buscar..." type="text" />
-    <input type="button" value="Geocoder" onClick="initMap()" />
-</div>
-
-       <input id="pac-input" class="controls" type="text"
-        placeholder="Enter a location">
-    <div id="type-selector" class="controls">
-      <input type="radio" name="type" id="changetype-all" checked="checked">
-      <label for="changetype-all">All</label>
-
-      <input type="radio" name="type" id="changetype-establishment">
-      <label for="changetype-establishment">Establishments</label>
-
-      <input type="radio" name="type" id="changetype-address">
-      <label for="changetype-address">Addresses</label>
-
-      <input type="radio" name="type" id="changetype-geocode">
-      <label for="changetype-geocode">Geocodes</label>
-    </div>
-    <div id="map"></div>
-
-   <!-- <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&callback=initMap">
-    </script>
--->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
 </html>
 
 
