--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@ src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+M
      <input id="estado" placeholder="Estado a buscar..." type="text" />
     <input type="button" value="Geocoder" onClick="start()" />
 </div>
+   <div>
     <input id="lugar" class="controls" placeholder="Lugar a buscar..." type="text" />
     <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
+    </div>
     <div id="type-selector" class="controls">
       <input type="radio" name="type" id="changetype-all" checked="checked">
       <label for="changetype-all">All</label>
