--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <body>
 <h1><strong>Formulario ejemplo !!!</strong></h1>
-<iframe id="myIframe" width="600" height="450" frameborder="0" style="border:0"
+<iframe id="myIframe" width="800" height="450" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
 
 <div>
@@ -71,7 +71,7 @@ src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+M
     <input type="button" value="Geocoder" onClick="start()" />
 </div>
    <div>
-    <input id="lugar" class="controls" placeholder="Lugar a buscar..." type="text" />
+    <input id="lugar" class="controls" style="z-index: 0position: absolute; left: 117px; top: 0px;" placeholder="Lugar a buscar..." type="text" />
     <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
     </div>
     <div id="type-selector" class="controls">
