--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
 
 <body>
 <h1><strong>Formulario ejemplo !!!</strong></h1>
-<iframe id="myIframe" width="900" height="700" frameborder="0" style="border:0"
+<iframe id="myIframe" width="800" height="600" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
 
 <div>
      <input id="estado" placeholder="Estado a buscar..." type="text" />
     <input type="button" value="Geocoder" onClick="start()" />
 </div>
-   <div>
-    <input id="lugar" class="controls" placeholder="Lugar a buscar..." type="text" />
-    <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
+   <div class="controls">
+    <input id="lugar"  placeholder="Lugar a buscar..." type="text" />
+    <input id="pac-input"  type="text" placeholder="Enter a location">
     </div>
     <div id="type-selector" class="controls">
       <input type="radio" name="type" id="changetype-all" checked="checked">
