--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   font-size: 15px;
   font-weight: 300;
   margin-left: 12px;
-  padding: 0 11px 0 40px;
+  padding:40px 41px 50px 80px;
   text-overflow: ellipsis;
   width: 300px;
 }
@@ -63,7 +63,7 @@
 
 <body>
 <h1><strong>Formulario ejemplo !!!</strong></h1>
-<iframe id="myIframe" width="800" height="600" frameborder="0" style="border:0"
+<iframe id="myIframe" width="800" height="700" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
 
 <div>
