--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   font-size: 15px;
   font-weight: 300;
   margin-left: 12px;
-  padding:40px 41px 50px 80px;
+  padding: 0 11px 0 13px;
   text-overflow: ellipsis;
   width: 300px;
 }
@@ -186,7 +186,7 @@ var infowindow = new google.maps.InfoWindow();
      
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&signed_in=true&libraries=places&callback=initMap"
+<script  width="800" height="700" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&signed_in=true&libraries=places&callback=initMap"
         async defer>
     </script>
 </html>
