--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
 <h1><strong>Formulario ejemplo !!!</strong></h1>
 <iframe id="myIframe" width="800" height="700" frameborder="0" style="border:0"
-src="https://www.google.com/maps/embed/v1/search?q=Bares+de+Oaxaca+de+Juárez,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
+src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
 
 <div>
      <input id="estado" placeholder="Estado a buscar..." type="text" />
@@ -186,7 +186,7 @@ var infowindow = new google.maps.InfoWindow();
      
 </script>
 
-<script  width="800" height="700" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&signed_in=true&libraries=places&callback=initMap"
+<script   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&signed_in=true&libraries=places&callback=initMap"
         async defer>
     </script>
 </html>
