--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7
       <input type="radio" name="type" id="changetype-geocode">
       <label for="changetype-geocode">Geocodes</label>
     </div>
-    <div id="map"></div>
+    <div id="map" width="800" height="700" ></div>
    <!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&callback=initMap">
     </script>
