--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
         padding: 0;
       }
       #map {
-        height: 100%;
+        height: 500px;
+        width: 500px;
       }
+     #myIframe{
+        width="500"
+        height="500" 
+     }
 .controls {
   margin-top: 10px;
   border: 1px solid transparent;
@@ -63,7 +68,7 @@
 
 <body>
 <h1><strong>Formulario ejemplo !!!</strong></h1>
-<iframe id="myIframe" width="800" height="700" frameborder="0" style="border:0"
+<iframe id="myIframe" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw" allowfullscreen></iframe>
 
 <div>
@@ -87,7 +92,7 @@ src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7
       <input type="radio" name="type" id="changetype-geocode">
       <label for="changetype-geocode">Geocodes</label>
     </div>
-    <div id="map" width="800" height="700" ></div>
+    <div id="map"></div>
    <!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw&callback=initMap">
     </script>
