--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         width: 500px;
       }
      #myIframe{
-        width="500"
-        height="500" 
+        width=500px;
+        height=500px; 
      }
 .controls {
   margin-top: 10px;
