--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7
     var lugar = document.getElementById("lugar").value;
    // var estado = document.getElementById("estado").value; 
     
-    document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+esta+'&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
+    document.getElementById('myIframe').src ='https://www.google.com/maps/embed/v1/search?q='+lugar+'de'+esta+'&key=AIzaSyAU7_l7egJjMuRDkwwFf5v3V8gSKofP0cw';
     }
     
     function initMap() {
