--- a/index.html
+++ b/index.html
@@ -77,7 +77,19 @@ src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7
     <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
     <input type="button" value="Geocoder" onClick="start()" />
 </div>
+<div id="type-selector" class="controls">
+      <input type="radio" name="type" id="changetype-all" checked="checked">
+      <label for="changetype-all">All</label>
 
+      <input type="radio" name="type" id="changetype-establishment">
+      <label for="changetype-establishment">Establishments</label>
+
+      <input type="radio" name="type" id="changetype-address">
+      <label for="changetype-address">Addresses</label>
+
+      <input type="radio" name="type" id="changetype-geocode">
+      <label for="changetype-geocode">Geocodes</label>
+    </div>
    
     
     <div id="map">
@@ -109,10 +121,10 @@ src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7
         
     var input = (document.getElementById('pac-input'));
     var luga = (document.getElementById('lugar'));
-    //var types = document.getElementById('type-selector');
+    var types = document.getElementById('type-selector');
     map.controls[google.maps.ControlPosition.TOP_RIGHT].push(input);
     map.controls[google.maps.ControlPosition.TOP_LEFT].push(luga);
-    //map.controls[google.maps.ControlPosition.TOP_LEFT].push(types);
+    map.controls[google.maps.ControlPosition.TOP_LEFT].push(types);
 
     var autocomplete = new google.maps.places.Autocomplete(input);
     autocomplete.bindTo('bounds', map);
