--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7
     <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
     </div>
     <div id="type-selector" class="controls">
-      <input type="radio" name="type" id="changetype-all" checked="checked">
+      <input type="text" placeholder="lugar a buscar" id="changetype-all" checked="checked">
       <label for="changetype-all">All</label>
 
       <input type="radio" name="type" id="changetype-establishment">
