--- a/index.html
+++ b/index.html
@@ -75,12 +75,14 @@ src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7
      <input id="estado" placeholder="Estado a buscar..." type="text" />
     <input type="button" value="Geocoder" onClick="start()" />
 </div>
-   <div>
+<!--
+<div>
     <input id="lugar" class="controls" placeholder="Lugar a buscar..." type="text" />
     <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
-    </div>
+</div>
+   -->
     <div id="type-selector" class="controls">
-      <input type="text" placeholder="lugar a buscar" id="changetype-all" checked="checked">
+      <input id="lugar" class="control" placeholder="lugar a buscar" type="text">
       <label for="changetype-all">All</label>
 
       <input type="radio" name="type" id="changetype-establishment">
