--- a/index.html
+++ b/index.html
@@ -82,17 +82,8 @@ src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7
 </div>
    -->
     <div id="type-selector" class="controls">
-      <input id="lugar" class="control" placeholder="lugar a buscar" type="text">
-      <label for="changetype-all">All</label>
-
-      <input type="radio" name="type" id="changetype-establishment">
-      <label for="changetype-establishment">Establishments</label>
-
-      <input type="radio" name="type" id="changetype-address">
-      <label for="changetype-address">Addresses</label>
-
-      <input type="radio" name="type" id="changetype-geocode">
-      <label for="changetype-geocode">Geocodes</label>
+    <input id="lugar" class="controls" placeholder="Lugar a buscar..." type="text" />
+    <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
     </div>
     <div id="map">
         
