--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7
     <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
 </div>
    -->
-    <div  class="controls">
+    <div id="type-selector" >
     <input id="lugar" class="controls" placeholder="Lugar a buscar..." type="text" />
     <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
     <input type="button" value="Geocoder" onClick="start()" />
