--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 }
 
 #type-selector {
-  color: #fff;
-  background-color: #4d90fe;
+color: #ddd;
+  background-color: #fff;
   padding:0px 0px 0px 0px;
 }
 
