--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
   text-overflow: ellipsis;
   width: 300px;
 }
+     #lugar:focus{
+ border-color: #4d90fe;
+         
+     }
 
 #pac-input:focus {
   border-color: #4d90fe;
