--- a/index.html
+++ b/index.html
@@ -39,10 +39,21 @@
   text-overflow: ellipsis;
   width: 300px;
 }
-     #lugar:focus{
+     #lugar{
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 200px;
+     }
+     .lugar:focus{
  border-color: #4d90fe;
          
      }
+     
 
 #pac-input:focus {
   border-color: #4d90fe;
