--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   text-overflow: ellipsis;
   width: 200px;
      }
-     .lugar:focus{
+     #lugar:focus{
  border-color: #4d90fe;
          
      }
