--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ src="https://www.google.com/maps/embed/v1/search?q=Mexico,+México&key=AIzaSyAU7
 </div>
    -->
     <div id="type-selector" >
-    <input id="lugar" class="controls" placeholder="Lugar a buscar..." type="text" />
-    <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
+    <input id="lugar" class="controls" placeholder="Sitios a buscar..." type="text" />
+    <input id="pac-input" class="controls" type="text" placeholder="Lugar a buscar...">
     <input type="button" value="Geocoder" onClick="start()" />
     
     
